re PR c++/14032 (Specialization of inner template using outer template argument doesn't work)

PR c++/14032
        * pt.c (most_specialized_class): Substitute outer template
        arguments into the arguments of a member template partial
        specialization.
        (strip_innermost_template_args): New fn.

From-SVN: r128090